# VrindaAI

./: .gitignore  00_START_HERE.md  ARCHITECTURE_JOB_MANIFESTS.md  CLEANUP_AND_RESTRUCTURE.md  CMakeLists.txt  CMake_Setup.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  ERRORS_FIXED.md  ERROR_RESOLUTION.md  EXECUTIVE_SUMMARY.md  FINAL_RESOLUTION_REPORT.md  HEADLESS_EXECUTION_STATUS.md  HEADLESS_OPERATION_SUCCESS.md  HEADLESS_QUICK_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  PIPELINE_SUCCESS.md  PROBLEMS_RESOLVED.md  QUICKSTART_JOBS.md  README.md  README_DEPENDENCIES.md  SYSTEM_ARCHITECTURE.md  TEST_RESULTS_AND_STATUS.md  VrindaAI_sa_IN.ts  cinematic_pipeline.json  cinematic_scifi_pipeline.json  cleanup_project_v2.py  debug_neural_link.py  fix_grpc.py  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memory_service.py  phases.md  professional_cinema_pipeline.json  requirements.txt  run_headless_workflow.bat  run_vrindaai.bat  run_workflow.bat  (+16 more)
Controllers/: animationcontroller.cpp  animationcontroller.h  blendercontroller.cpp  blendercontroller.h  compilercontroller.cpp  compilercontroller.h  ffmpegcontroller.cpp  ffmpegcontroller.h  llamaservercontroller.cpp  llamaservercontroller.h  modelingcontroller.cpp  modelingcontroller.h  projectstatecontroller.cpp  projectstatecontroller.h  projectworkflow.cpp  projectworkflow.h  texturingcontroller.cpp  texturingcontroller.h  unrealcontroller.cpp  unrealcontroller.h  validatorcontroller.cpp  validatorcontroller.h
Resources/: example_workflow.json  job_schema.json
Services/: autonomousworkflowengine.cpp  autonomousworkflowengine.h  cinematicproductionworkflow.cpp  cinematicproductionworkflow.h  databasemanager.cpp  databasemanager.h  gameproductionworkflow.cpp  gameproductionworkflow.h  headlessexecutor.cpp  headlessexecutor.h  intelligentprojectplanner.cpp  intelligentprojectplanner.h  jobmanifestmanager.cpp  jobmanifestmanager.h  llmrequestprocessor.cpp  llmrequestprocessor.h  modelmanager.cpp  modelmanager.h  projectmanager.cpp  projectmanager.h  reportgenerator.cpp  reportgenerator.h  vectordatabasemanager.cpp  vectordatabasemanager.h  workflowexecutor.cpp  workflowexecutor.h
Utils/: codescanner.cpp  codescanner.h  promptsanitizer.cpp  promptsanitizer.h
config/: settings.json
docs/: COMPLETE_GUIDE.md
examples/: 01_text_to_video.py  02_json_to_game.py  03_scene_description.py  04_temple_cinematic.py
inputs/: sample_job.json
jobs/: blender_cinematic_job.json  blender_scifi_cinematic.json  blender_test_default_scene.json  davinci_composite_job.json  davinci_scifi_composite.json  unreal_cinematic_sequence.json
llama.cpp/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  VrindaAI.vcxproj  VrindaAI.vcxproj.filters  VrindaAI_lrelease.vcxproj  VrindaAI_lrelease.vcxproj.filters  VrindaAI_lupdate.vcxproj  VrindaAI_lupdate.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  release_translations.vcxproj  release_translations.vcxproj.filters  update_translations.vcxproj  update_translations.vcxproj.filters
pipeline/: llm_adapter.py  orchestrator.py
prompts/: Animation.txt  Architect.txt  Assistant.txt  Coder.txt  Corrector.txt  Designer.txt  Editing.txt  Engine.txt  Engineer.txt  Integrator.txt  Manager.txt  Modeling.txt  Planner.txt  Researcher.txt  Vrinda.txt
(+57 files in other folders)
